# stand-up-lazy

./: README.md  pyproject.toml  requirements.txt  stand_up.spec  stand_up_lazy.py  stand_up_lazy.spec
icons/: stand_up_lazy.icns
