[project]
name = "stand_up_lazy"
version = "0.1.0"
description = ""
authors = [
    {name = "schwepmo",email = "moritz.schweppenhaeuser@fokus.fraunhofer.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "plyer (>=2.1.0,<3.0.0)",
    "pyobjus (>=1.2.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
   stand_up_lazy = "stand_up_lazy:main"