[project]
name = "stand_up_lazy"
version = "0.1.0"
description = ""
authors = [
    { name = "schwepmo", email = "moritz@schweppenhaeuser.info" }
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "plyer (>=2.1.0,<3.0.0)",
    "pyobjus (>=1.2.3,<2.0.0) ; sys_platform == \"darwin\"",
    "sv-ttk (>=2.6.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", ]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
stand_up_lazy = "stand_up_lazy:main"

[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.13.0"
